--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,12 @@ uses: actions/setup-python@v1
 with:
 python-version: 3.7.3
 name: Install dependencies
-run:
+run: |
 make install
 name: Lint with pylint
-run:
+run: | 
 make lint.
 name: Test with pytest
-run;
+run: |
 make test
-name: Format code
+
