--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,17 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+    steps: 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Setup Python 3.7.3
+        uses: actions/python@v1
+        with: 
+          python-version: 3.7.3
+      - name: Install Dependencies
+        run: |
+          make install
+      
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
