--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Setup Python 3.7.3
-        uses: actions/python@v1
+        uses: actions/setup-python@v1
         with: 
           python-version: 3.7.3
       - name: Install Dependencies
