--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,9 @@ jobs:
       - name: lint with pylint
         run: |
           make lint
+      - name: test with pytest
+        run: |
+          make test
           
           
         
